--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,385 @@
-black
-flake8
-isort
-mypy
-pre-commit
-pytest
-pytest-cov
-toml
-types-requests
-types-setuptools
+aiohttp==3.8.5
+aiosignal==1.3.1
+alabaster==0.7.12
+albumentations==1.3.1
+anomalib==0.6.0
+antlr4-python3-runtime==4.9.3
+anyio==3.5.0
+appdirs==1.4.4
+argon2-cffi==21.3.0
+argon2-cffi-bindings==21.2.0
+arrow==1.2.2
+astroid==2.11.7
+astropy==4.3.1
+async-timeout==4.0.3
+asynctest==0.13.0
+atomicwrites==1.4.0
+attrs==21.4.0
+Automat==20.2.0
+autopep8==1.6.0
+av==10.0.0
+Babel==2.9.1
+backcall==0.2.0
+backports.functools-lru-cache==1.6.4
+backports.tempfile==1.0
+backports.weakref==1.0.post1
+barbar==0.2.1
+bcrypt==3.2.0
+beautifulsoup4==4.11.1
+binaryornot==0.4.4
+bitarray==2.5.1
+bkcharts==0.2
+black==22.12.0
+bleach==4.1.0
+bokeh==2.4.3
+boto3==1.24.28
+botocore==1.27.28
+Bottleneck==1.3.5
+brotlipy==0.7.0
+camelot-py==0.11.0
+catboost==1.2
+certifi==2022.9.14
+cffi==1.15.1
+cfgv==3.3.1
+chardet==4.0.0
+charset-normalizer==2.1.1
+click==8.1.6
+cloudpickle==2.2.1
+colorama==0.4.5
+colorcet==3.0.0
+combo==0.1.3
+constantly==15.1.0
+cookiecutter==1.7.3
+copulas==0.9.0
+coverage==7.2.6
+cryptography==37.0.1
+cssselect==1.1.0
+cycler==0.11.0
+Cython==0.29.32
+cytoolz==0.11.0
+dask==2021.10.0
+datashader==0.14.1
+datashape==0.5.2
+debugpy==1.5.1
+decorator==5.1.1
+defusedxml==0.7.1
+delu==0.0.13
+diff-match-patch==20200713
+dill==0.3.4
+distlib==0.3.6
+distributed==2021.10.0
+docstring-parser==0.15
+docutils==0.17.1
+dpcpp-cpp-rt==2023.2.0
+einops==0.6.1
+entrypoints==0.4
+et-xmlfile==1.1.0
+exceptiongroup==1.1.1
+Faker==18.10.1
+fastjsonschema==2.16.2
+filelock==3.12.0
+flake8==4.0.1
+Flask==1.1.2
+fonttools==4.25.0
+FrEIA==0.2
+frozenlist==1.3.3
+fsspec==2022.7.1
+future==0.18.2
+gensim==4.1.2
+ghostscript==0.7
+gitdb==4.0.10
+GitPython==3.1.32
+glob2==0.7
+gmpy2==2.1.2
+graphviz==0.20.1
+greenlet==1.1.1
+h5py==2.10.0
+HeapDict==1.0.1
+holoviews==1.15.0
+huggingface-hub==0.16.4
+hvplot==0.8.0
+hyperlink==21.0.0
+identify==2.5.24
+idna==3.3
+imagecodecs==2021.8.26
+imageio==2.19.3
+imageio-ffmpeg==0.4.8
+imagesize==1.4.1
+imgaug==0.4.0
+importlib-metadata==6.7.0
+importlib-resources==5.2.0
+incremental==21.3.0
+inflection==0.5.1
+iniconfig==2.0.0
+intake==0.6.5
+intel-cmplr-lib-rt==2023.2.0
+intel-cmplr-lic-rt==2023.2.0
+intel-opencl-rt==2023.2.0
+intel-openmp==2023.2.0
+intervaltree==3.1.0
+ipykernel==6.15.2
+ipython==7.31.1
+ipython-genutils==0.2.0
+ipywidgets==7.6.5
+isort==5.11.4
+itemadapter==0.3.0
+itemloaders==1.0.4
+itsdangerous==2.0.1
+jdcal==1.4.1
+jedi==0.18.1
+jeepney==0.7.1
+jellyfish==0.9.0
+Jinja2==2.11.3
+jinja2-time==0.2.0
+jmespath==0.10.0
+joblib==1.1.0
+json5==0.9.6
+jsonargparse==4.23.1
+jsonschema==4.16.0
+jupyter==1.0.0
+jupyter-console==6.4.3
+jupyter-core==4.11.1
+jupyter-server==1.18.1
+jupyter_client==7.3.5
+jupyterlab==3.4.4
+jupyterlab-pygments==0.1.2
+jupyterlab-server==2.10.3
+jupyterlab-widgets==1.0.0
+keyring==23.4.0
+kiwisolver==1.4.2
+kornia==0.6.9
+lazy-object-proxy==1.6.0
+libarchive-c==2.9
+lightgbm==3.3.5
+lightning-utilities==0.9.0
+llvmlite==0.38.0
+locket==1.0.0
+lxml==4.9.1
+Markdown==3.3.4
+MarkupSafe==2.0.1
+matplotlib==3.5.2
+matplotlib-inline==0.1.6
+mccabe==0.6.1
+mistune==0.8.4
+mkl==2023.2.0
+mkl-fft==1.3.1
+mkl-random==1.2.2
+mkl-service==2.4.0
+mock==4.0.3
+mpmath==1.2.1
+msgpack==1.0.3
+multidict==6.0.4
+multipledispatch==0.6.0
+munkres==1.1.4
+mypy==1.3.0
+mypy-extensions==1.0.0
+nbclassic==0.3.5
+nbclient==0.5.13
+nbconvert==6.4.4
+nbformat==5.5.0
+nest-asyncio==1.5.5
+networkx==2.6.3
+nltk==3.7
+nodeenv==1.8.0
+nose==1.3.7
+notebook==6.4.12
+notebook-as-pdf==0.5.0
+numba==0.55.1
+numexpr==2.8.3
+numpy==1.21.6
+numpydoc==1.4.0
+nvidia-cublas-cu11==11.10.3.66
+olefile==0.46
+omegaconf==2.3.0
+opencv-python==4.8.0.74
+opencv-python-headless==4.8.0.76
+openpyxl==3.0.10
+openvino==2023.0.1
+packaging==23.0
+pandas==1.3.5
+pandocfilters==1.5.0
+panel==0.13.1
+param==1.12.0
+parsel==1.6.0
+parso==0.8.3
+partd==1.2.0
+pathspec==0.10.3
+patsy==0.5.3
+pdfminer.six==20221105
+pdftopng==0.2.3
+pep8==1.7.1
+pexpect==4.8.0
+pickleshare==0.7.5
+Pillow==9.2.0
+pkginfo==1.8.2
+pkgutil_resolve_name==1.3.10
+platformdirs==2.6.2
+plotly==5.9.0
+pluggy==1.0.0
+ply==3.11
+poyo==0.5.0
+pre-commit==2.21.0
+prometheus-client==0.14.1
+prompt-toolkit==3.0.20
+Protego==0.1.16
+psutil==5.9.0
+ptyprocess==0.7.0
+py==1.11.0
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
+pycodestyle==2.8.0
+pycosat==0.6.3
+pycparser==2.21
+pycrypto==2.6.1
+pyct==0.4.8
+pycurl==7.45.1
+PyDispatcher==2.0.5
+pydocstyle==6.1.1
+pyee==8.2.2
+pyerfa==2.0.0
+pyflakes==2.4.0
+pyg-lib==0.2.0+pt113cu116
+Pygments==2.11.2
+pygod==0.4.0
+PyHamcrest==2.0.2
+pylint==2.14.5
+pyls-spyder==0.4.0
+pynvml==11.5.0
+pyod==1.0.9
+pyodbc==4.0.34
+pyOpenSSL==22.0.0
+pyparsing==3.0.9
+pypdf==3.13.0
+PyPDF2==3.0.1
+pyppeteer==1.0.2
+PyQt5==5.15.9
+PyQt5-Qt5==5.15.2
+PyQt5-sip==12.11.0
+PyQtWebEngine==5.15.6
+PyQtWebEngine-Qt5==5.15.2
+pyrsistent==0.18.0
+PySocks==1.7.1
+pytest==7.3.1
+pytest-cov==4.0.0
+python-dateutil==2.8.2
+python-lsp-black==1.2.1
+python-lsp-jsonrpc==1.0.0
+python-lsp-server==1.5.0
+python-slugify==5.0.2
+python-snappy==0.6.0
+pytorch-lightning==1.9.5
+pytz==2022.1
+pyviz-comms==2.0.2
+PyWavelets==1.3.0
+pyxdg==0.27
+PyYAML==5.4.1
+pyzmq==23.2.0
+QDarkStyle==3.0.2
+qstylizer==0.1.10
+QtAwesome==1.0.3
+qtconsole==5.3.2
+QtPy==2.2.0
+qudida==0.0.4
+queuelib==1.5.0
+rdt==1.5.0
+regex==2022.7.9
+requests==2.28.1
+requests-file==1.5.1
+rope==0.22.0
+rtdl==0.0.13
+Rtree==0.9.7
+s3transfer==0.6.0
+scikit-image==0.19.2
+scikit-learn==1.0.2
+scipy==1.7.3
+Scrapy==2.6.2
+seaborn==0.11.2
+SecretStorage==3.3.1
+Send2Trash==1.8.0
+service-identity==18.1.0
+shapely==2.0.1
+singledispatchmethod==1.0
+sip==6.6.2
+six==1.16.0
+smart-open==5.2.1
+smmap==5.0.0
+sniffio==1.2.0
+snowballstemmer==2.2.0
+sortedcollections==2.1.0
+sortedcontainers==2.4.0
+soupsieve==2.3.1
+Sphinx==4.2.0
+sphinxcontrib-applehelp==1.0.2
+sphinxcontrib-devhelp==1.0.2
+sphinxcontrib-htmlhelp==2.0.0
+sphinxcontrib-jsmath==1.0.1
+sphinxcontrib-qthelp==1.0.3
+sphinxcontrib-serializinghtml==1.1.5
+spyder==5.3.3
+spyder-kernels==2.3.3
+SQLAlchemy==1.4.39
+statsmodels==0.13.5
+sympy==1.10.1
+tables==3.6.1
+tabulate==0.8.10
+tbb==2021.10.0
+tblib==1.7.0
+tenacity==8.0.1
+terminado==0.13.1
+testpath==0.6.0
+text-unidecode==1.3
+textdistance==4.2.1
+threadpoolctl==3.1.0
+three-merge==0.1.1
+tifffile==2021.7.2
+timm==0.6.12
+tinycss==0.4
+tldextract==3.2.0
+toml==0.10.2
+tomli==2.0.1
+tomlkit==0.11.1
+toolz==0.11.2
+torch==1.13.0+cu116
+torch-cluster==1.6.1+pt113cu116
+torch-geometric==2.3.1
+torch-scatter==2.1.1+pt113cu116
+torch-sparse==0.6.17+pt113cu116
+torch-spline-conv==1.2.2+pt113cu116
+torchaudio==0.13.0+cu116
+torchmetrics==0.10.3
+torchvision==0.14.0+cu116
+tornado==6.2
+tqdm==4.64.1
+traitlets==5.1.1
+Twisted==22.2.0
+typed-ast==1.5.4
+types-requests==2.31.0.0
+types-setuptools==67.8.0.0
+types-urllib3==1.26.25.13
+typeshed-client==2.3.0
+typing_extensions==4.4.0
+ujson==5.4.0
+Unidecode==1.2.0
+urllib3==1.26.11
+virtualenv==20.16.2
+w3lib==1.21.0
+watchdog==2.1.6
+wcwidth==0.2.5
+webencodings==0.5.1
+websocket-client==0.58.0
+websockets==10.4
+Werkzeug==2.0.3
+whatthepatch==1.0.2
+widgetsnbextension==3.5.2
+wrapt==1.14.1
+wurlitzer==3.0.2
+xarray==0.20.1
+xgboost==1.6.2
+xlrd==2.0.1
+XlsxWriter==3.0.3
+yapf==0.31.0
+yarl==1.8.2
+zict==2.1.0
+zipp==3.8.0
+zope.interface==5.4.0
+zstandard==0.19.0
