--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,9 @@
+aequitas==0.42.0
 aiohttp==3.8.5
 aiosignal==1.3.1
 alabaster==0.7.12
 albumentations==1.3.1
+altair==4.1.0
 anomalib==0.6.0
 antlr4-python3-runtime==4.9.3
 anyio==3.5.0
@@ -62,6 +64,7 @@ datashader==0.14.1
 datashape==0.5.2
 debugpy==1.5.1
 decorator==5.1.1
+deepod==0.3.0
 defusedxml==0.7.1
 delu==0.0.13
 diff-match-patch==20200713
@@ -70,6 +73,7 @@ distlib==0.3.6
 distributed==2021.10.0
 docstring-parser==0.15
 docutils==0.17.1
+dominate==2.8.0
 dpcpp-cpp-rt==2023.2.0
 einops==0.6.1
 entrypoints==0.4
@@ -79,7 +83,8 @@ Faker==18.10.1
 fastjsonschema==2.16.2
 filelock==3.12.0
 flake8==4.0.1
-Flask==1.1.2
+Flask==0.12.2
+Flask-Bootstrap==3.3.7.1
 fonttools==4.25.0
 FrEIA==0.2
 frozenlist==1.3.3
@@ -96,6 +101,8 @@ greenlet==1.1.1
 h5py==2.10.0
 HeapDict==1.0.1
 holoviews==1.15.0
+html5lib==1.1
+httplib2==0.22.0
 huggingface-hub==0.16.4
 hvplot==0.8.0
 hyperlink==21.0.0
@@ -156,10 +163,12 @@ llvmlite==0.38.0
 locket==1.0.0
 lxml==4.9.1
 Markdown==3.3.4
+markdown2==2.3.5
 MarkupSafe==2.0.1
 matplotlib==3.5.2
 matplotlib-inline==0.1.6
 mccabe==0.6.1
+millify==0.1.1
 mistune==0.8.4
 mkl==2023.2.0
 mkl-fft==1.3.1
@@ -189,6 +198,7 @@ numexpr==2.8.3
 numpy==1.21.6
 numpydoc==1.4.0
 nvidia-cublas-cu11==11.10.3.66
+ohio==0.5.0
 olefile==0.46
 omegaconf==2.3.0
 opencv-python==4.8.0.74
@@ -268,6 +278,7 @@ python-lsp-server==1.5.0
 python-slugify==5.0.2
 python-snappy==0.6.0
 pytorch-lightning==1.9.5
+pytorch-tabnet==4.1.0
 pytz==2022.1
 pyviz-comms==2.0.2
 PyWavelets==1.3.0
@@ -283,6 +294,7 @@ qudida==0.0.4
 queuelib==1.5.0
 rdt==1.5.0
 regex==2022.7.9
+reportlab==4.0.4
 requests==2.28.1
 requests-file==1.5.1
 rope==0.22.0
@@ -321,7 +333,7 @@ SQLAlchemy==1.4.39
 statsmodels==0.13.5
 sympy==1.10.1
 tables==3.6.1
-tabulate==0.8.10
+tabulate==0.8.2
 tbb==2021.10.0
 tblib==1.7.0
 tenacity==8.0.1
@@ -362,6 +374,7 @@ ujson==5.4.0
 Unidecode==1.2.0
 urllib3==1.26.11
 virtualenv==20.16.2
+visitor==0.1.3
 w3lib==1.21.0
 watchdog==2.1.6
 wcwidth==0.2.5
@@ -375,6 +388,7 @@ wrapt==1.14.1
 wurlitzer==3.0.2
 xarray==0.20.1
 xgboost==1.6.2
+xhtml2pdf==0.2.2
 xlrd==2.0.1
 XlsxWriter==3.0.3
 yapf==0.31.0
